# juce-layout-manager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Tests/: SandboxApp.cpp  TestComponents.cpp  TestComponents.h
Tests/data/xml/: ode_layout.xml
layout_manager/: layout_manager.cpp  layout_manager.h
layout_manager/internal/: CustomComponents.cpp  CustomComponents.h  Inspector.cpp  Inspector.h  LMLookAndFeel.cpp  LMLookAndFeel.h  LayoutManager.cpp  LayoutManager.h
scripts/: figma_json_grabber.py  static_font_converter.py
